--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{"devDependencies": {
+{
+  "devDependencies": {
     "@chainlink/contracts": "0.4.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
@@ -12,6 +13,8 @@
     "dotenv": "^16.1.3",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "hardhat": "^2.14.1",
     "hardhat-contract-sizer": "^2.9.0",
     "hardhat-deploy": "^0.11.30",
